apps/uptime-kuma/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  labels:
    app: uptime-kuma
spec:
  selector:
    app: uptime-kuma
  ports:
    - name: http
      protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: authentik-outpost
spec:
  type: ExternalName
  externalName: ak-outpost-nginx-ingress-controller-outpost.authentik.svc.cluster.local
  ports:
    - name: http
      port: 9000
      targetPort: 9000
    - name: https
      port: 9443
      targetPort: 9443
