apps/uptime-kuma/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: uptime.nasus.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authentik-outpost
                port:
                  name: http
  tls:
    - hosts:
        - uptime.nasus.dev
      secretName: uptime-kuma-tls
